// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar component Toolbar builds and overflows left side 1`] = `
<div>
  <div
    class="toolbar"
    style="width: 10px;"
  >
    <div
      class="toolbar__left-group"
    >
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div>
          <button
            class="bp5-button bp5-align-left toolbar-button"
            title="Button Hello"
            type="button"
          >
            <span
              class="bp5-button-text"
            >
              <span />
            </span>
          </button>
        </div>
      </div>
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div
          class="toolbar-button-group"
        >
          <div>
            <button
              class="bp5-button toolbar-button--icon-only"
              style="width: 30px;"
              title="Pan waveforms to the left"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span
                  aria-hidden="true"
                  class="bp5-icon bp5-icon-arrow-left"
                >
                  <svg
                    data-icon="arrow-left"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div>
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              style="width: 50px;"
              title="Hello CheckboxDropdown"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span />
                <span
                  aria-hidden="true"
                  class="bp5-icon bp5-icon-standard bp5-icon-caret-down"
                  data-icon="caret-down"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div
          class="toolbar-button--capsule"
        >
          <div
            class="date-range-picker"
            id="date-range-picker-id-1"
          >
            <label
              class="bp5-label bp5-label bp5-inline date-range-picker__label"
            >
              Time Range: 1970-01-01 00:00 to 1970-01-01 00:00
            </label>
            <div>
              <button
                class="bp5-button date-range-picker__apply-button"
                data-cy="date-range-picker-edit"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  Edit
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div>
          <div
            class="dropdown-container"
          >
            <span
              class="dropdown-selector"
              data-cy="-dropdown"
            >
              <div
                class="bp5-html-select"
              >
                <select
                  style="min-width: 50px; width: 50px;"
                  title="Hello Dropdown"
                />
                <span
                  class="bp5-icon bp5-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                      fill-rule="evenodd"
                      transform="scale(0.05, -0.05) translate(-160, -160)"
                      transform-origin="center"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div
          class="toolbar-label-value"
        >
          <div
            class="label-value-container"
          >
            <div
              class="label-value__label"
              data-cy="label-label"
            >
              label: 
            </div>
            <div
              class="label-value__value"
              data-cy="label-value"
              title="Hello label"
            />
          </div>
        </div>
      </div>
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div>
          <div
            class="loading-spinner__container"
            style="min-width: 50px;"
          >
            <span>
              <div
                aria-label="loading"
                aria-valuemax="100"
                aria-valuemin="0"
                class="bp5-spinner bp5-intent-primary"
                role="progressbar"
                size="20"
              >
                <div
                  class="bp5-spinner-animation"
                >
                  <svg
                    height="20"
                    stroke-width="16.00"
                    viewBox="-3.00 -3.00 106.00 106.00"
                    width="20"
                  >
                    <path
                      class="bp5-spinner-track"
                      d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                    />
                    <path
                      class="bp5-spinner-head"
                      d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                      pathLength="280"
                      stroke-dasharray="280 280"
                      stroke-dashoffset="210"
                    />
                  </svg>
                </div>
              </div>
              <span>
                Loading
                ...
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div>
          <div
            class="numeric-input__wrapper"
            style="width: 50px;"
          >
            <div
              class="bp5-control-group bp5-fill bp5-numeric-input numeric-input undefined"
            >
              <div
                class="bp5-input-group"
              >
                <input
                  aria-valuemax="43"
                  aria-valuemin="41"
                  aria-valuenow="42"
                  autocomplete="off"
                  class="bp5-input"
                  id="numericInput-0"
                  max="43"
                  min="41"
                  placeholder="Enter a number..."
                  role="spinbutton"
                  title="Hello Numeric"
                  type="text"
                  value="42"
                  width="50"
                />
              </div>
              <div
                class="bp5-button-group bp5-vertical bp5-fixed"
              >
                <button
                  aria-controls="numericInput-0"
                  aria-label="increment"
                  class="bp5-button"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-chevron-up"
                  >
                    <svg
                      data-icon="chevron-up"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M254.2 134.2L174.2 214.2C170.6 217.8 165.6 220 160 220S149.4 217.8 145.8 214.2L65.8 134.2C62.2 130.6 60 125.6 60 120C60 109 69 100 80 100C85.6 100 90.6 102.2 94.2 105.8L160 171.8L225.8 106C229.4 102.2 234.4 100 240 100C251 100 260 109 260 120C260 125.6 257.8 130.6 254.2 134.2z"
                        fill-rule="evenodd"
                        transform="scale(0.05, -0.05) translate(-160, -160)"
                        transform-origin="center"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-controls="numericInput-0"
                  aria-label="decrement"
                  class="bp5-button"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M240 220C234.4 220 229.4 217.8 225.8 214.2L160 148.2L94.2 214.2C90.6 217.8 85.6 220 80 220C69 220 60 211 60 200C60 194.4 62.2 189.4 65.8 185.8L145.8 105.8C149.4 102.2 154.4 100 160 100S170.6 102.2 174.2 105.8L254.2 185.8C257.8 189.4 260 194.4 260 200C260 211 251 220 240 220z"
                        fill-rule="evenodd"
                        transform="scale(0.05, -0.05) translate(-160, -160)"
                        transform-origin="center"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div>
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              style="width: 50px;"
              title="Hello Popover"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span />
                <span
                  aria-hidden="true"
                  class="bp5-icon bp5-icon-standard bp5-icon-caret-down"
                  data-icon="caret-down"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div
          class="toolbar-switch"
        >
          <label
            class="bp5-control bp5-switch bp5-large toolbar-switch__blueprint undefined"
          >
            <input
              checked=""
              type="checkbox"
            />
            <span
              class="bp5-control-indicator"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      class="toolbar__center-group"
    >
      <div
        class="toolbar__whitespace"
        style="width: 10px;"
      />
    </div>
    <div
      class="toolbar__right-group"
    />
  </div>
</div>
`;

exports[`Toolbar component Toolbar builds and overflows right side 1`] = `
<div>
  <div
    class="toolbar"
    style="width: 10px;"
  >
    <div
      class="toolbar__left-group"
    />
    <div
      class="toolbar__center-group"
    >
      <div
        class="toolbar__whitespace"
        style="width: 10px;"
      />
    </div>
    <div
      class="toolbar__right-group"
    >
      <div
        class="toolbar-item
                  "
      >
        <div>
          <button
            class="bp5-button bp5-align-left toolbar-button"
            title="Button Hello"
            type="button"
          >
            <span
              class="bp5-button-text"
            >
              <span />
            </span>
          </button>
        </div>
      </div>
      <div
        class="toolbar-item
                  "
      >
        <div
          class="toolbar-button-group"
        >
          <div>
            <button
              class="bp5-button toolbar-button--icon-only"
              style="width: 30px;"
              title="Pan waveforms to the left"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span
                  aria-hidden="true"
                  class="bp5-icon bp5-icon-arrow-left"
                >
                  <svg
                    data-icon="arrow-left"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item
                  "
      >
        <div>
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              style="width: 50px;"
              title="Hello CheckboxDropdown"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span />
                <span
                  aria-hidden="true"
                  class="bp5-icon bp5-icon-caret-down"
                >
                  <svg
                    data-icon="caret-down"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item
                  "
      >
        <div
          class="toolbar-button--capsule"
        >
          <div
            class="date-range-picker"
            id="date-range-picker-id-2"
          >
            <label
              class="bp5-label bp5-label bp5-inline date-range-picker__label"
            >
              Time Range: 1970-01-01 00:00 to 1970-01-01 00:00
            </label>
            <div>
              <button
                class="bp5-button date-range-picker__apply-button"
                data-cy="date-range-picker-edit"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  Edit
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item
                  "
      >
        <div>
          <div
            class="dropdown-container"
          >
            <span
              class="dropdown-selector"
              data-cy="-dropdown"
            >
              <div
                class="bp5-html-select"
              >
                <select
                  style="min-width: 50px; width: 50px;"
                  title="Hello Dropdown"
                />
                <span
                  class="bp5-icon bp5-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                      fill-rule="evenodd"
                      transform="scale(0.05, -0.05) translate(-160, -160)"
                      transform-origin="center"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item
                  "
      >
        <div
          class="toolbar-label-value"
        >
          <div
            class="label-value-container"
          >
            <div
              class="label-value__label"
              data-cy="label-label"
            >
              label: 
            </div>
            <div
              class="label-value__value"
              data-cy="label-value"
              title="Hello label"
            />
          </div>
        </div>
      </div>
      <div
        class="toolbar-item
                  "
      >
        <div>
          <div
            class="loading-spinner__container"
            style="min-width: 50px;"
          >
            <span>
              <div
                aria-label="loading"
                aria-valuemax="100"
                aria-valuemin="0"
                class="bp5-spinner bp5-intent-primary"
                role="progressbar"
                size="20"
              >
                <div
                  class="bp5-spinner-animation"
                >
                  <svg
                    height="20"
                    stroke-width="16.00"
                    viewBox="-3.00 -3.00 106.00 106.00"
                    width="20"
                  >
                    <path
                      class="bp5-spinner-track"
                      d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                    />
                    <path
                      class="bp5-spinner-head"
                      d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                      pathLength="280"
                      stroke-dasharray="280 280"
                      stroke-dashoffset="210"
                    />
                  </svg>
                </div>
              </div>
              <span>
                Loading
                ...
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item
                  "
      >
        <div>
          <div
            class="numeric-input__wrapper"
            style="width: 50px;"
          >
            <div
              class="bp5-control-group bp5-fill bp5-numeric-input numeric-input undefined"
            >
              <div
                class="bp5-input-group"
              >
                <input
                  aria-valuemax="43"
                  aria-valuemin="41"
                  aria-valuenow="42"
                  autocomplete="off"
                  class="bp5-input"
                  id="numericInput-1"
                  max="43"
                  min="41"
                  placeholder="Enter a number..."
                  role="spinbutton"
                  title="Hello Numeric"
                  type="text"
                  value="42"
                  width="50"
                />
              </div>
              <div
                class="bp5-button-group bp5-vertical bp5-fixed"
              >
                <button
                  aria-controls="numericInput-1"
                  aria-label="increment"
                  class="bp5-button"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-chevron-up"
                  >
                    <svg
                      data-icon="chevron-up"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M254.2 134.2L174.2 214.2C170.6 217.8 165.6 220 160 220S149.4 217.8 145.8 214.2L65.8 134.2C62.2 130.6 60 125.6 60 120C60 109 69 100 80 100C85.6 100 90.6 102.2 94.2 105.8L160 171.8L225.8 106C229.4 102.2 234.4 100 240 100C251 100 260 109 260 120C260 125.6 257.8 130.6 254.2 134.2z"
                        fill-rule="evenodd"
                        transform="scale(0.05, -0.05) translate(-160, -160)"
                        transform-origin="center"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-controls="numericInput-1"
                  aria-label="decrement"
                  class="bp5-button"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M240 220C234.4 220 229.4 217.8 225.8 214.2L160 148.2L94.2 214.2C90.6 217.8 85.6 220 80 220C69 220 60 211 60 200C60 194.4 62.2 189.4 65.8 185.8L145.8 105.8C149.4 102.2 154.4 100 160 100S170.6 102.2 174.2 105.8L254.2 185.8C257.8 189.4 260 194.4 260 200C260 211 251 220 240 220z"
                        fill-rule="evenodd"
                        transform="scale(0.05, -0.05) translate(-160, -160)"
                        transform-origin="center"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item
                  "
      >
        <div>
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              style="width: 50px;"
              title="Hello Popover"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span />
                <span
                  aria-hidden="true"
                  class="bp5-icon bp5-icon-caret-down"
                >
                  <svg
                    data-icon="caret-down"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item
                  "
      >
        <div
          class="toolbar-switch"
        >
          <label
            class="bp5-control bp5-switch bp5-large toolbar-switch__blueprint undefined"
          >
            <input
              checked=""
              type="checkbox"
            />
            <span
              class="bp5-control-indicator"
            />
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Toolbar component Toolbar builds empty 1`] = `
<div>
  <div
    class="toolbar"
    style="width: 100px;"
  >
    <div
      class="toolbar__left-group"
    />
    <div
      class="toolbar__center-group"
    >
      <div
        class="toolbar__whitespace"
        style="width: 100px;"
      />
    </div>
    <div
      class="toolbar__right-group"
    />
  </div>
</div>
`;

exports[`Toolbar component Toolbar builds left and right, no overflow 1`] = `
<div>
  <div
    class="toolbar"
    style="width: 1000px;"
  >
    <div
      class="toolbar__left-group"
    >
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div>
          <button
            class="bp5-button bp5-align-left toolbar-button"
            title="Button Hello"
            type="button"
          >
            <span
              class="bp5-button-text"
            >
              <span />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="toolbar__center-group"
    >
      <div
        class="toolbar__whitespace"
        style="width: 1000px;"
      />
    </div>
    <div
      class="toolbar__right-group"
    >
      <div
        class="toolbar-item
                  "
      >
        <div
          class="toolbar-button-group"
        >
          <div>
            <button
              class="bp5-button toolbar-button--icon-only"
              style="width: 30px;"
              title="Pan waveforms to the left"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span
                  aria-hidden="true"
                  class="bp5-icon bp5-icon-standard bp5-icon-arrow-left"
                  data-icon="arrow-left"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Toolbar component Toolbar builds left and right, overflow both sides 1`] = `
<div>
  <div
    class="toolbar"
    style="width: 10px;"
  >
    <div
      class="toolbar__left-group"
    >
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div>
          <button
            class="bp5-button bp5-align-left toolbar-button"
            title="Button Hello"
            type="button"
          >
            <span
              class="bp5-button-text"
            >
              <span />
            </span>
          </button>
        </div>
      </div>
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div
          class="toolbar-button-group"
        >
          <div>
            <button
              class="bp5-button toolbar-button--icon-only"
              style="width: 30px;"
              title="Pan waveforms to the left"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span
                  aria-hidden="true"
                  class="bp5-icon bp5-icon-arrow-left"
                >
                  <svg
                    data-icon="arrow-left"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div>
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              style="width: 50px;"
              title="Hello CheckboxDropdown"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span />
                <span
                  aria-hidden="true"
                  class="bp5-icon bp5-icon-caret-down"
                >
                  <svg
                    data-icon="caret-down"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div
          class="toolbar-button--capsule"
        >
          <div
            class="date-range-picker"
            id="date-range-picker-id-3"
          >
            <label
              class="bp5-label bp5-label bp5-inline date-range-picker__label"
            >
              Time Range: 1970-01-01 00:00 to 1970-01-01 00:00
            </label>
            <div>
              <button
                class="bp5-button date-range-picker__apply-button"
                data-cy="date-range-picker-edit"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  Edit
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item toolbar-item__left"
      >
        <div>
          <div
            class="dropdown-container"
          >
            <span
              class="dropdown-selector"
              data-cy="-dropdown"
            >
              <div
                class="bp5-html-select"
              >
                <select
                  style="min-width: 50px; width: 50px;"
                  title="Hello Dropdown"
                />
                <span
                  class="bp5-icon bp5-icon-double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      Open dropdown
                    </title>
                    <path
                      d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                      fill-rule="evenodd"
                      transform="scale(0.05, -0.05) translate(-160, -160)"
                      transform-origin="center"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="toolbar__center-group"
    >
      <div
        class="toolbar__whitespace"
        style="width: 10px;"
      />
    </div>
    <div
      class="toolbar__right-group"
    >
      <div
        class="toolbar-item
                  "
      >
        <div
          class="toolbar-label-value"
        >
          <div
            class="label-value-container"
          >
            <div
              class="label-value__label"
              data-cy="label-label"
            >
              label: 
            </div>
            <div
              class="label-value__value"
              data-cy="label-value"
              title="Hello label"
            />
          </div>
        </div>
      </div>
      <div
        class="toolbar-item
                  "
      >
        <div>
          <div
            class="loading-spinner__container"
            style="min-width: 50px;"
          >
            <span>
              <div
                aria-label="loading"
                aria-valuemax="100"
                aria-valuemin="0"
                class="bp5-spinner bp5-intent-primary"
                role="progressbar"
                size="20"
              >
                <div
                  class="bp5-spinner-animation"
                >
                  <svg
                    height="20"
                    stroke-width="16.00"
                    viewBox="-3.00 -3.00 106.00 106.00"
                    width="20"
                  >
                    <path
                      class="bp5-spinner-track"
                      d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                    />
                    <path
                      class="bp5-spinner-head"
                      d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                      pathLength="280"
                      stroke-dasharray="280 280"
                      stroke-dashoffset="210"
                    />
                  </svg>
                </div>
              </div>
              <span>
                Loading
                ...
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item
                  "
      >
        <div>
          <div
            class="numeric-input__wrapper"
            style="width: 50px;"
          >
            <div
              class="bp5-control-group bp5-fill bp5-numeric-input numeric-input undefined"
            >
              <div
                class="bp5-input-group"
              >
                <input
                  aria-valuemax="43"
                  aria-valuemin="41"
                  aria-valuenow="42"
                  autocomplete="off"
                  class="bp5-input"
                  id="numericInput-2"
                  max="43"
                  min="41"
                  placeholder="Enter a number..."
                  role="spinbutton"
                  title="Hello Numeric"
                  type="text"
                  value="42"
                  width="50"
                />
              </div>
              <div
                class="bp5-button-group bp5-vertical bp5-fixed"
              >
                <button
                  aria-controls="numericInput-2"
                  aria-label="increment"
                  class="bp5-button"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-chevron-up"
                  >
                    <svg
                      data-icon="chevron-up"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M254.2 134.2L174.2 214.2C170.6 217.8 165.6 220 160 220S149.4 217.8 145.8 214.2L65.8 134.2C62.2 130.6 60 125.6 60 120C60 109 69 100 80 100C85.6 100 90.6 102.2 94.2 105.8L160 171.8L225.8 106C229.4 102.2 234.4 100 240 100C251 100 260 109 260 120C260 125.6 257.8 130.6 254.2 134.2z"
                        fill-rule="evenodd"
                        transform="scale(0.05, -0.05) translate(-160, -160)"
                        transform-origin="center"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  aria-controls="numericInput-2"
                  aria-label="decrement"
                  class="bp5-button"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M240 220C234.4 220 229.4 217.8 225.8 214.2L160 148.2L94.2 214.2C90.6 217.8 85.6 220 80 220C69 220 60 211 60 200C60 194.4 62.2 189.4 65.8 185.8L145.8 105.8C149.4 102.2 154.4 100 160 100S170.6 102.2 174.2 105.8L254.2 185.8C257.8 189.4 260 194.4 260 200C260 211 251 220 240 220z"
                        fill-rule="evenodd"
                        transform="scale(0.05, -0.05) translate(-160, -160)"
                        transform-origin="center"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item
                  "
      >
        <div>
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              style="width: 50px;"
              title="Hello Popover"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span />
                <span
                  aria-hidden="true"
                  class="bp5-icon bp5-icon-caret-down"
                >
                  <svg
                    data-icon="caret-down"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="toolbar-item
                  "
      >
        <div
          class="toolbar-switch"
        >
          <label
            class="bp5-control bp5-switch bp5-large toolbar-switch__blueprint undefined"
          >
            <input
              checked=""
              type="checkbox"
            />
            <span
              class="bp5-control-indicator"
            />
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
